--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 title: TTLequals0
 title_image: https://en.gravatar.com/userimage/81172957/792a60d5bff56cc493d8df740ef350dd.jpg?size=200
 email: dkrachtus@ttlequals0.com
-description: TTLequals0  
+title_description: "PGP Fingerprint: 85B0 C5C4 591E B464 05A6 BD6C 746C 85FA 1125 44E9"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://TTLequals0.com" # the base hostname & protocol for your site
 addthis_id: ra-570ae5c51aa52c0e
